Read data more precisely; Read sleep data
