# domain/src/main/kotlin/br/com/arcasoftware/stayfit/domain/SleepStageType.kt
@@ -1,0 +1,9 @@
+package br.com.arcasoftware.stayfit.domain
+
+enum class SleepStageType {
+    UNDEFINED,
+    AWAKE,
+    LIGHT,
+    DEEP,
+    REM
+}
